# noir-plus-bench

./: .env  .gitignore  Cargo.toml  noir-1.yml  noir-2.yml  noir-3.yml  noir-4.yml  scripts.sh
migrations/: 00_init.sql
src/: lib.rs
src/enrich/: mod.rs  postgres.rs  postgres_blocking.rs  redis.rs  scylladb.rs  types.rs
