[package]
name = "noir-plus-extra"
version = "0.1.0"
edition = "2021"

[features]
default = ["async"]
async = ["noir-compute/async-tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.12"
micrometer = { version = "0.2.7", features = ["enable", "perforation-128"] }
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
noir-compute = { path = "../noir-main/noir" }
serde = { version = "1.0.196", features = ["derive"] }
mimalloc = { version = "0.1.39", default-features = false }
csv = "1.3.0"
ahash = "0.8.9"
indexmap = "2.2.3"
itertools = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
rand_distr = "0.4.3"
dotenvy = "0.15.7"
futures = "0.3.30"
r2d2_postgres = "0.18.1"
backoff = "0.4.0"
